# korean-law-data-tools

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
docs/: LawScraper.md
korean_law_data_tools/: __init__.py  cli.py
src/scraper/: LawScraper.py  kordoc_parse.mjs
tests/: test_law_scraper_update_mode.py  test_public_api.py
