[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "korean-law-data-tools"
version = "0.1.0"
description = "Tools for collecting and updating Korean law data from law.go.kr."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "requests",
  "rich",
]

[project.optional-dependencies]
test = [
  "pypdf",
  "pytest",
]

[project.scripts]
korean-law-data-tools = "korean_law_data_tools.cli:cli"

[tool.setuptools]
packages = ["korean_law_data_tools", "src", "src.scraper"]

[tool.pytest.ini_options]
pythonpath = ["."]
